--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-keyring (0.1-0aurex1) precise; urgency=low
+
+  * Rebbuild for aurex 12.04
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 11 Oct 2012 10:39:09 +0200
+
 openmediavault-keyring (0.1) stable; urgency=low
 
   * Initial release
